--- a/report.Rmd
+++ b/report.Rmd
@@ -5,43 +5,46 @@ date: "October 19, 2017"
 output: html_document
 ---
 
-### Problem Statement:
-Given historical airplane on time performance data,offer suggestions for two-hop flights that minimize the chance of missing a connection.
 
-### Implementation high level view
+### Problem Statement:
+Given historical airplane on time performance data, offer suggestions for two-hop flights that minimize the chance of missing a connection.
+
+
+### Implementation - Flow Diagram
 ![](workflow.png)
 
 
 ### Implementation
 
-The implementation can be divided into following parts
+The implementation is divided into following parts:
 
-1.	The first map reduce job fetches all the possible combination of two hop flights based on the input provided. 
-+	The mapper fetches all the flights which have the origin equal to origin in the input but destination not equal to that in input (to filter out direct flights). Similarly, it fetches all the flights which have destination equal to destination in the input but origin not equal to origin in input(to filter out direct flights). This way mapper gets all the two hop flights possible between the origin and destination mentioned in the input.
+1.	The first map reduce job fetches all the possible combinations of two hop flights based on the input provided. 
++	The mapper fetches all the flights which have the origin equal to origin in the input but destination not equal to that in input (to filter out direct flights). Similarly, it fetches all the flights which have destination equal to destination in the input but origin not equal to origin in input (to filter out direct flights). This way mapper outputs all the two hop flights possible between the origin and destination mentioned in the input.
 
-+ The output of the mapper is one of either
-Key - Airport - Value -{'Firsthop', Flightdetails} or Key - Airport - Value - {'Secondhop',Flightdetails}
-+	The reducer then combines all the two hop flights possible between the given origin  and destination in input and emits out Key - {Year,Month,Day,ORIG,DEST} - Value - {Firsthop Flight details, Secondhop Flight details}
-Note: In this step we calculate these output pairs based on the Scheduled Arrival and Departure times. 
++ Thus, the output of the mapper is one of either
+Key - Airport, Value -{'Firsthop', Flightdetails} or Key - Airport, Value - {'Secondhop', Flightdetails}
++	The reducer then combines all the two hop flights possible between the given origin  and destination in input and emits out Key - {Year, Month, Day, Origin, Destination}, Value - {Firsthop Flight details, Secondhop Flight details}
+Note: In this step we calculate these output pairs based on the Scheduled Arrival and Scheduled Departure times. 
 
-2.  In this step we run another map reduce phase to compute the mean delay of arrival time for each airline by origin and destination over all the years prior to the year in the input and simultaneously the fraction of flights that were canclled.
-+ The output of this map reduce phase is Key - {Month,Airline,Destination,Origin} - Value - {Mean Arrival Delay ,Fraction of flights cancelled} 
+2. Next, we run another map reduce phase to compute the mean delay (based on arrival time) for each airline by origin and destination over all the years prior to the year in the input and simultaneously the fraction of flights that were cancelled (total flights cancelled/total flights)
++ The output of this map reduce phase is Key - {Month, Airline, Destination, Origin}, Value - {Mean Arrival Delay, Fraction of flights cancelled} 
 
-3. This phase involves filtering out the Flight hop pairs of record based on the mean delay and cancellation data we observed in previous step.We are mainly interested in if after adding the mean delay observed over the years to the arrival time causes the  flight to miss the second flight or if the flight is historically cancelled more that 20% of the time .(This 20% needs to be fine tunded ) 
-+ In the map phase we have two mappers reading from two different sources emitting a common key 
-Mapper 1 - Key - {Month,Airline,Origin,Destination} Value - {"Firsthop", Full line as read from the hops reducers output}
-Mapper 2 - Key - {Month,Airline,Origin,Destination}  Value - {"DelayAndCancellation",MeanDelay,CancellationFraction}
+3. This phase involves filtering out the flight hop pairs of record based on the mean delay and cancellation data we got in previous step. We are mainly interested in; if after adding the mean delay observed over the years to the arrival time causes the second flight to be missed or if the flight is historically cancelled more than 20% of the time. (This 20% needs to be fine tuned). 
++ We have two mappers reading from two different files emitting a common key 
+Mapper 1: Key - {Month, Airline, Origin, Destination}, Value - {"Firsthop", Full line as read from the hop reducer's output}
+Mapper 2: Key - {Month, Airline, Origin, Destination}, Value - {"DelayAndCancellation", MeanDelay, CancellationFraction}
 
-4. We run the above filter phase again ,but this time we look at only the second hop flights and look to eliminate the flight hop pair if the second flight is delayed by more than 20% historically.We also compute the number of records which are correct and incorrect using global counters in map reduce. By correct we mean those records which are present in our output where both flights actually landed on time and was not cancelled on that day.And by incorrect we mean the the output record contains either a first flight which arrived late or was cancelled or a second flight which was cancelled. 
+4. We run the above filter phase again, but this time we look at only the second hop flights and look to eliminate the flight hop pair if the second flight is cancelled by more than 20% historically. We also compute the number of records which are correct and incorrect using global counters in map reduce. "Correct" here means those records which are present in our output where the connection was not missed. "Incorrect" means the output record contains a first flight which was cancelled or connection was missed or a second flight which was cancelled. 
 
-+ Note: If anyone is wondering steps 3 and 4 take only about 30 seconds each.
++ Note: Steps 3 and 4 take only about 30 seconds each (for all our experiments).
 
-5. The final phase is the validation phase where we compute the different flight connections for the inputs based on the actual time the flights arrive and depart at the hop destination on that day . And we compute the number of records we output as this gives a number which indicates the total number of correct connections. Note that we reuse the code from first step
+5. The final phase is the validation phase where we compute the different flight connections for the inputs based on the actual time the flights arrive and depart at the hop destination on that day . And we compute the number of records we output as this gives a number which indicates the total number of correct connections. Note that we reuse the code from first step.
+
 
 ### Task Distribution
 Design: Aditya, Apoorv, Dhvani  
-HopMapper and Reducer: Aditya and Apoorv  
-DelayCancelmapper and Reducer: Aditya and Dhvani  
+HopMapper and Reducer: Aditya and Apoorv
+DelayCancelMapper and Reducer: Aditya and Dhvani  
 FilterMapper: Aditya, Apoorv, Dhvani  
 Report: Aditya, Apoorv, Dhvani  
 
@@ -49,20 +52,19 @@ Report: Aditya, Apoorv, Dhvani
 ### Configuration of the machines used
 
 The program was intially run on AWS EMR with one namenode and four datanodes on the whole dataset. 
-Later on we increased the number of datanodes to 8 to get a better runtime.
+Later, we increased the number of datanodes to 8.
 
-Below is the configuration of the machines used:  
-Namenode:   
-vCPU: 8   RAM: 16GB   Hard Disk: 70GB  
-Datanodes:   
-vCPU: 8  RAM:  16GB   Hard Disk: 70GB  
+Below is the configuration of the machines used (m4.xlarge):  
+Namenode and Datanodes:
+vCPU: 4   RAM: 16GB   Hard Disk: 70GB  SSD Storage: EBS-only
 
 Processors for all the above machines were 64 bit 2.4 GHz Intel Xeon® E5-2676 v3 (Haswell) processors. 
 Each vCPU is a hyperthread of an Intel Xeon core.
 
+
 ### Performance  
 
-Following is the perfromance we got on AWS EMR configurations mentioned above.
+Following is the perfromance achieved by running the program on AWS EMR configurations mentioned above.
 
 |Iteration|Name Nodes | Data Nodes | Runtime|
 |-----------|-----------|------------|--------|
@@ -73,9 +75,9 @@ Following is the perfromance we got on AWS EMR configurations mentioned above.
 
 ### Results
 
-####Expreiment 1
+####Experiment 1
 
-Following was the input we gave to our model:
+Input:
 
 ```
 2001,7,4,JFK,LAX
@@ -83,75 +85,74 @@ Following was the input we gave to our model:
 2001,12,5,DEN,ORD
 ```
 
-We found out that the total number of two hop flights which were on time was **3561**.
-We found out this using actual arrival time, actual departure time and cancelled data while calculating the two hops.
+Total number of flights with two hops not missing the connection was **3561**.
+We calculated this using actual arrival time, actual departure time and whether either of the flights in the hops were cancelled or not and layover conditions (>45 and <720 minutes) were met.
 
-After the first step where we get the two hop flights, by considering only the CRS scheduled time and not the  cancellation time following was the result :-
+After the first step where we get the two hop flights connections by considering only the CRS scheduled time, following was the result :-
 
-| Correct Hops 	| Incorrect Hops 	|
+| Correct connections 	| Incorrect connections 	|
 |-------------	|-------------	  |
 | 3410         	| 193        	    | 
 
-_correct hops : the two hop connection, where both the flights were on time_  
-_incorrect hops : the two hop connection, where either of the flights were not on time or cancelled_
+_correct connections : the two hop connection, where layover conditions were met and neither flights were cancelled (Calculated using actual times)_
+_incorrect connections : the two hop connection, where layover conditions were not met and either flights were cancelled (Calculated using actual times)_
 
 ```{r echo = FALSE}
-df <- data.frame(Two_Hops= factor(c("Correct Hops", "Incorrect Hops")))
+df <- data.frame(Legend = factor(c("Correct connections", "Incorrect connections")))
 Number_of_Hops=c(3410, 193)
 
 library(ggplot2)
-plot <- ggplot(data=df, aes(x=Two_Hops, y=Number_of_Hops, fill=Two_Hops)) +
+plot <- ggplot(data=df, aes(x=Legend, y=Number_of_Hops, fill=Legend)) +
   geom_bar(stat="identity") +
-  scale_fill_manual(values=c("#66CC88", "#CC6886"))
-print(plot +ggtitle("Hop accuracy hop map reducer"))
+  scale_fill_manual(values=c("#66CC88", "#CC6886")) + xlab("") + ylab("Number of connections")
+print(plot + ggtitle("Correct vs Incorrect connections"))
 ```
 
-After the fourth step when we give the above data to our model for prediction and consider delay and cancellation for prediction, following was the result
+After predicting the two flight hops to be taken, following was the result
 
-| Correct Predicted Hops 	| Incorrect Predicted Hops 	|
+| Correct Predicted connections 	| Incorrect Predicted connections 	|
 |-------------	|-------------	  |
 | 3263         	| 134        	    |
 
-_correct hops : the two hop connection, where both the flights were on time_  
-_incorrect hops : the two hop connection, where either of the flights were not on time or cancelled_
+_correct connections : the two hop connection, where layover conditions were met and neither flights were cancelled (Calculated using actual times)_
+_incorrect connections : the two hop connection, where layover conditions were not met and either flights were cancelled (Calculated using actual times)_
 
-|Total correct Hops |
+|Total correct connections |
 |-------------------|
 |3561               |
 
-_total correct hops: the total number of two hop connections which were on time_
+_total correct connections : the total number of two hop connections which were on time_
 
 ```{r echo = FALSE}
-df <- data.frame(Two_Hops= factor(c("Correct Hops", "Incorrect Hops")))
+df <- data.frame(Legend = factor(c("Correct connections", "Incorrect connections")))
 Number_of_Hops=c(3263, 134)
 
 library(ggplot2)
-plot <- ggplot(data=df, aes(x=Two_Hops, y=Number_of_Hops, fill=Two_Hops)) +
+plot <- ggplot(data=df, aes(x=Legend, y=Number_of_Hops, fill=Legend)) +
   geom_bar(stat="identity") +
-  scale_fill_manual(values=c("#66CC88", "#CC6886"))
-print(plot +ggtitle("Hop accuracy after prediction using model"))
+  scale_fill_manual(values=c("#66CC88", "#CC6886")) + xlab("") + ylab("Number of connections")
+print(plot + ggtitle("Correct vs Incorrect connections"))
 ```
 
-Precision and accuracy:  
-
-Follwing is the precision and accuracy for our model:-
+Precision and accuracy:
 
 |Precision|Accuracy|
 |-------- |--------|
 | 0.96 | 0.91 |
 
-Precision is calculated as ( Number of True Positives ) / (Number of True Positives + Number of False Positives)
+Precision is calculated as (Number of True Positives) / (Number of True Positives + Number of False Positives)
 
-Accuracy is calculated as (correct hops fetched/ total correct hops)
+Accuracy is calculated as (Correct connections fetched) / (Total correct connections)
 
 **Conclusion**
-Our final output consisted of 3397 two hop flight suggestions. Out of these records 3263 records were correct predictions (the two hop flight reaches destination on time) and 134 were incorrect predictions (the two hop flight does not reach destination in time).  
+Our final output consisted of 3397 two hop flight suggestions. Out of these records 3263 records were correct predictions and 134 were incorrect predictions.
 We validated our result by comparing it to the actual arrival time, departure time and cancellation time of the flights we have generated as output.  
-Overall the accuracy of using the average delay and cancellation probability as model is 91% with a precision of 96%.
+The accuracy of using the average delay and cancellation probability as model is 91% with a precision of 96% for the above experiment.
 
-####Expreiment 2
 
-Following was the input we gave to our model:
+####Experiment 2
+
+Input:
 
 ```
 2014,7,4,JFK,LAX
@@ -161,72 +162,75 @@ Following was the input we gave to our model:
 2014,6,7,TUS,SIT
 ```
 
-We found out that the total number of two hop flights which were on time was **3746**.
-We found out this using actual arrival time, actual departure time and cancelled data while calculating the two hops.
+Total number of flights with two hops not missing the connection was **3746**.
+We calculated this using actual arrival time, actual departure time and whether either of the flights in the hops were cancelled or not and layover conditions (>45 and <720 minutes) were met.
 
-After the first step where we get the two hop flights, by considering only the CRS scheduled time and not the  cancellation time following was the result :-
+After the first step where we get the two hop flights connections by considering only the CRS scheduled time, following was the result :-
 
-| Correct Hops 	| Incorrect Hops 	| 
+| Correct connections  	| Incorrect connections  	| 
 |-------------	|-------------	  |
 | 3463         	| 194        	    |  
 
-_correct hops : the two hop connection, where both the flights were on time_  
-_incorrect hops : the two hop connection, where either of the flights were not on time or cancelled_
+_correct connections  : the two hop connection, where layover conditions were met and neither flights were cancelled (Calculated using actual times)_
+_incorrect connections  : the two hop connection, where layover conditions were not met and either flights were cancelled (Calculated using actual times)_
 
 ```{r echo = FALSE}
-df <- data.frame(Two_Hops= factor(c("Correct Hops", "Incorrect Hops")))
+df <- data.frame(Legend = factor(c("Correct connections", "Incorrect connections")))
 Number_of_Hops=c(3463, 194)
 
 library(ggplot2)
-plot <- ggplot(data=df, aes(x=Two_Hops, y=Number_of_Hops, fill=Two_Hops)) +
+plot <- ggplot(data=df, aes(x=Legend, y=Number_of_Hops, fill=Legend)) +
   geom_bar(stat="identity") +
-  scale_fill_manual(values=c("#66CC88", "#CC6886"))
-print(plot +ggtitle("Hop accuracy hop map reducer"))
+  scale_fill_manual(values=c("#66CC88", "#CC6886")) + xlab("") + ylab("Number of connections")
+print(plot + ggtitle("Correct vs Incorrect connections"))
 ```
 
-After the fourth step when we give the above data to our model for prediction and consider delay and cancellation for prediction, following was the result
+After predicting the two flight hops to be taken, following was the result
 
-| Correct Predicted Hops 	| Incorrect Predicted Hops 	|
+| Correct Predicted connections  	| Incorrect Predicted connections  	|
 |-------------	|-------------	  |
 | 3314         	| 141        	    |
 
-_correct hops : the two hop connection, where both the flights were on time_  
-_incorrect hops : the two hop connection, where either of the flights were not on time or cancelled_
+_correct connections  : the two hop connection, where layover conditions were met and neither flights were cancelled (Calculated using actual times)_
+_incorrect connections  : the two hop connection, where layover conditions were not met and either flights were cancelled (Calculated using actual times)_
 
 
 |Total correct Hops |
 |-------------------|
 |3746               |
 
-_total correct hops: the total number of two hop connections which were on time_
+_total correct connections : the total number of two hop connections which were on time_
 
 ```{r echo = FALSE}
-df <- data.frame(Two_Hops= factor(c("Correct Hops", "Incorrect Hops")))
+df <- data.frame(Legend = factor(c("Correct connections", "Incorrect connections")))
 Number_of_Hops=c(3314, 141)
 
 library(ggplot2)
-plot <- ggplot(data=df, aes(x=Two_Hops, y=Number_of_Hops, fill=Two_Hops)) +
+plot <- ggplot(data=df, aes(x=Legend, y=Number_of_Hops, fill=Legend)) +
   geom_bar(stat="identity") +
-  scale_fill_manual(values=c("#66CC88", "#CC6886"))
-print(plot +ggtitle("Hop accuracy after prediction using model"))
+  scale_fill_manual(values=c("#66CC88", "#CC6886")) + xlab("") + ylab("Number of connections")
+print(plot + ggtitle("Correct vs Incorrect connections"))
 ```
 
 Precision and accuracy:  
-
-Follwing is the precision and accuracy for our model:-
 
 |Precision|Accuracy|
 |-------- |--------|
 | 0.95 | 0.88 |
 
+Precision is calculated as (Number of True Positives) / (Number of True Positives + Number of False Positives)
+
+Accuracy is calculated as (Correct connections fetched) / (Total correct connections)
+
 **Conclusion**
-Our final output consisted of 3455 two hop flight suggestions. Out of these records 3314 records were correct predictions (the two hop flight reaches destination on time) and 141 were incorrect predictions (the two hop flight does not reach destination in time).  
+Our final output consisted of 3455 two hop flight suggestions. Out of these records, 3314 records were correct predictions and 141 were incorrect predictions.
 We validated our result by comparing it to the actual arrival time, departure time and cancellation time of the flights we have generated as output.  
-Overall the accuracy of using the average delay and cancellation probability as model is 88% with a precision of 95%.
+The accuracy of using the average delay and cancellation probability as model is 88% with a precision of 95% for the above experiment.
 
-####Expreiment 3
 
-Following was the input we gave to our model:
+####Experiment 3
+
+Input:
 
 ```
 2009,7,4,JFK,LAX
@@ -236,72 +240,71 @@ Following was the input we gave to our model:
 2009,6,7,TUS,SIT
 ```
 
-We found out that the total number of two hop flights which were on time was **3618**.
-We found out this using actual arrival time, actual departure time and cancelled data while calculating the two hops.
+Total number of flights with two hops not missing the connection was **3618**.
+We calculated this using actual arrival time, actual departure time and whether either of the flights in the hops were cancelled or not and layover conditions (>45 and <720 minutes) were met.
 
-After the first step where we get the two hop flights, by considering only the CRS scheduled time and not the  cancellation time following was the result :-
+After the first step where we get the two hop flights connections by considering only the CRS scheduled time, following was the result :-
 
-| Correct Hops 	| Incorrect Hops 	| 
+| Correct connections  	| Incorrect connections  	| 
 |-------------	|-------------	  |
 | 3354         	| 179        	    | 
 
-_correct hops : the two hop connection, where both the flights were on time_  
-_incorrect hops : the two hop connection, where either of the flights were not on time or cancelled_
+_correct connections : the two hop connection, where layover conditions were met and neither flights were cancelled (Calculated using actual times)_
+_incorrect connections : the two hop connection, where layover conditions were not met and either flights were cancelled (Calculated using actual times)_
 
 ```{r echo = FALSE}
-df <- data.frame(Two_Hops= factor(c("Correct Hops", "Incorrect Hops")))
+df <- data.frame(Legend = factor(c("Correct connections", "Incorrect connections")))
 Number_of_Hops=c(3354, 179)
 
 library(ggplot2)
-plot <- ggplot(data=df, aes(x=Two_Hops, y=Number_of_Hops, fill=Two_Hops)) +
+plot <- ggplot(data=df, aes(x=Legend, y=Number_of_Hops, fill=Legend)) +
   geom_bar(stat="identity") +
-  scale_fill_manual(values=c("#66CC88", "#CC6886"))
-print(plot +ggtitle("Hop accuracy hop map reducer"))
+  scale_fill_manual(values=c("#66CC88", "#CC6886")) + xlab("") + ylab("Number of connections")
+print(plot + ggtitle("Correct vs Incorrect connections"))
 ```
 
-After the fourth step when we give the above data to our model for prediction and consider delay and cancellation for prediction, following was the result
+After predicting the two flight hops to be taken, following was the result
 
-| Correct Predicted Hops 	| Incorrect Predicted Hops 	|
+| Correct Predicted connections 	| Incorrect Predicted connections 	|
 |-------------	|-------------	  |
 | 3228         	| 97        	    |  
 
-_correct hops : the two hop connection, where both the flights were on time_  
-_incorrect hops : the two hop connection, where either of the flights were not on time or cancelled_
+_correct connections : the two hop connection, where layover conditions were met and neither flights were cancelled (Calculated using actual times)_
+_incorrect connections : the two hop connection, where layover conditions were not met and either flights were cancelled (Calculated using actual times)_
 
 |Total correct Hops |
 |-------------------|
 |3618               |
 
-_total correct hops: the total number of two hop connections which were on time_
+_total correct connections : the total number of two hop connections which were on time_
 
 ```{r echo = FALSE}
-df <- data.frame(Two_Hops= factor(c("Correct Hops", "Incorrect Hops")))
+df <- data.frame(Legend = factor(c("Correct connections", "Incorrect connections")))
 Number_of_Hops=c(3228, 97)
 
 library(ggplot2)
-plot <- ggplot(data=df, aes(x=Two_Hops, y=Number_of_Hops, fill=Two_Hops)) +
+plot <- ggplot(data=df, aes(x=Legend, y=Number_of_Hops, fill=Legend)) +
   geom_bar(stat="identity") +
-  scale_fill_manual(values=c("#66CC88", "#CC6886"))
-print(plot +ggtitle("Hop accuracy after prediction using model"))
+  scale_fill_manual(values=c("#66CC88", "#CC6886")) + xlab("") + ylab("Number of connections")
+print(plot + ggtitle("Correct vs Incorrect connections"))
 ```
 
 Precision and accuracy:  
-
-Follwing is the precision and accuracy for our model:-
 
 |Precision|Accuracy|
 |-------- |--------|
 | 0.97 | 0.89 |
 
-Precision is calculated as ( Number of True Positives ) / (Number of True Positives + Number of False Positives)
+Precision is calculated as (Number of True Positives) / (Number of True Positives + Number of False Positives)
 
-Accuracy is calculated as (correct hops fetched/ total correct hops)
+Accuracy is calculated as (Correct connections fetched) / (Total correct connections)
 
 **Conclusion**
-Our final output consisted of 3325 two hop flight suggestions. Out of these records 3228 records were correct predictions (the two hop flight reaches destination on time) and 97 were incorrect predictions (the two hop flight does not reach destination in time).  
+Our final output consisted of 3325 two hop flight suggestions. Out of these records 3228 records were correct predictions and 97 were incorrect predictions.
 We validated our result by comparing it to the actual arrival time, departure time and cancellation time of the flights we have generated as output.  
-Overall the accuracy of using the average delay and cancellation probability as model is 89% with a precision of 97%.  
+The accuracy of using the average delay and cancellation probability as model is 89% with a precision of 97% for the above experiment.
 
 
-  
+The input query and the outputs for the experiment 1 and 3 are there in the folders input_output_1 and input_output_3 respectively.
+
 
