--- a/review_pranav_tirthraj_shreysa.Rmd
+++ b/review_pranav_tirthraj_shreysa.Rmd
@@ -11,10 +11,48 @@ knitr::opts_chunk$set(echo = TRUE)
 
 ## Code setup and Execution
 1) Code is not split into parts making it hard to read.
-2)Redundant code is present with multiple functions making the same calls and doing the same things
+2)Redundant code is present with multiple lines doing the same calls and doing the same things.Example of the if  condition below-
+
+```
+        if (mapper.equals(FIRSTHOP)) {
+            StringBuilder sb = new StringBuilder();
+            String firstHop = record[1];
+            String[] firstHopSplit = firstHop.split(CSV_SEP);
+            sb.append(firstHopSplit[1]);
+            sb.append(CSV_SEP);
+            sb.append(firstHopSplit[5]);
+            sb.append(CSV_SEP);
+            sb.append(firstHopSplit[6]);
+            sb.append(CSV_SEP);
+            sb.append(firstHopSplit[7]);
+            outputKey.set(sb.toString());
+            String valueString = value.toString();
+            outputValue.set(FIRSTHOP + SPACE + valueString);
+            context.write(outputKey, outputValue);
+        }
+        else {
+            String secondHop = record[2];
+            String[] secondHopSplit = secondHop.split(CSV_SEP);
+            StringBuilder sb2 = new StringBuilder();
+            sb2.append(secondHopSplit[1]);
+            sb2.append(CSV_SEP);
+            sb2.append(secondHopSplit[4]);
+            sb2.append(CSV_SEP);
+            sb2.append(secondHopSplit[5]);
+            sb2.append(CSV_SEP);
+            sb2.append(secondHopSplit[6]);
+            outputKey.set(sb2.toString());
+            String valueString = value.toString();
+            outputValue.set(SECONDHOP+ SPACE + valueString);
+            context.write(outputKey, outputValue);
+        }
+```
+
 3) It is difficult to understand the code and how it functions because the code is not split and does multiple things at a time.
 4) The readme file is not clear enough to give details on how to execute the program.
-5) I could not get the code to run,even after following the steps outlined in the readme file.
+5) Records/Column names are fetched based on the column numbers,which is a bad technique in general.
+6)
+8) I could not get the code to run,even after following the steps outlined in the readme file.
 
 ## Report
 1) Report explains things clearly.
